# BytecodeWizards-Authoring

./: .gitignore
BytecodeWizardsAuthoring/: CMakeLists.txt  authoringwindow.cpp  authoringwindow.h  authoringwindow.ui  canvaswidget.cpp  canvaswidget.h  main.cpp
BytecodeWizardsAuthoring/Misc/: linesegment.cpp  linesegment.h
BytecodeWizardsAuthoring/Widgets/: IAuthoringWidget.h  Iauthoringwidget.h  baseinstructionwidget.cpp  baseinstructionwidget.h  simpleinstruction.cpp  simpleinstruction.h  singlevalueinstruction.cpp
BytecodeWizardsAuthoring/Widgets/Base/: Iauthoringwidget.h  baseinstructionwidget.cpp  baseinstructionwidget.h  doublevalueinstruction.cpp  doublevalueinstruction.h  simpleinstruction.cpp  simpleinstruction.h  singlevalueinstruction.cpp  singlevalueinstruction.h  singlevaluewizardinstruction.cpp  singlevaluewizardinstruction.h  valueinstruction.cpp  valueinstruction.h  wizardinstruction.cpp  wizardinstruction.h
BytecodeWizardsAuthoring/Widgets/Instructions/: add.cpp  add.h  divide.cpp  divide.h  gethealth.cpp  gethealth.h  getwisdom.cpp  getwisdom.h  multiply.cpp  multiply.h  playanim.cpp  playanim.h  playvfx.cpp  playvfx.h  sethealth.cpp  sethealth.h  setliteral.cpp  setliteral.h  setwisdom.cpp  setwisdom.h  subtract.cpp  subtract.h
